# claude-config

./: .credentials.template.json  .gitignore  .mcp.json  ADAPTIVE_ORCHESTRATION_COMPLETE_DESIGN.md  ADAPTIVE_ORCHESTRATION_DESIGN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_COMMAND_SUITE_IMPROVEMENTS.md  FORBIDDEN_PATTERNS.md  HOOK_ARCHITECTURE_IMPROVEMENTS.md  MEMORY_MCP_DESIGN.md  MEMORY_ORCHESTRATION_GUIDE.md  NO_FALLBACK_SYSTEM_SUMMARY.md  ORCHESTRATION_GUIDE.md  ORCHESTRATION_INTEGRATION.md  ORCHESTRATION_UPGRADE_SUMMARY.md  OVERVIEW.md  PARALLEL_EXECUTION_GUIDE.md  README.md  SYSTEM_IMPROVEMENTS_2025.md  TASK_DECOMPOSITION.json  TEST_PARALLELIZATION_RISK_ASSESSMENT.md  UNIVERSAL_LEARNER_TUNING.md  adaptive_orchestration_research_notes.md  backup-critical.sh  compact-preferences.json  file-protection-config.json  global_orchestration_patterns.json  llms.txt  mcp_config.json  orchestration_improvements.md  orchestration_patterns.json  project_knowledge.json  relevance_detection_research.md  settings.json  settings.local.example.json  setup.sh  statusline-command.sh  symphony_orchestration_guide.md  test_memory_mcp.md  (+2 more)
cc_orchestrations/: .gitignore  CLAUDE.md  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  pytest.ini  run_tests.py
cc_orchestrations/cc_orchestrations.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cc_orchestrations/conduct/: __init__.py  __main__.py  cli.py  config.py  workflow.py
cc_orchestrations/conduct/agents/: __init__.py  registry.py  runner.py
cc_orchestrations/conduct/core/: __init__.py  config.py
cc_orchestrations/conduct/docs/: SPEC_FORMAT.md
cc_orchestrations/conduct/prompts/: performance_review.txt  validate.txt
cc_orchestrations/conduct/tests/: test_dry_run.py
cc_orchestrations/conduct/workflow/: __init__.py  engine.py  gates.py  loops.py
cc_orchestrations/conduct/workflows/: __init__.py  conduct.py
cc_orchestrations/core/: CLAUDE.md  __init__.py  agents.py  config.py  context.py  extensions.py  git.py  manifest.py  paths.py  progress.py  registry.py  runner.py  schemas.py  state.py  trajectory.py  workspace.py  worktree.py
cc_orchestrations/extensions/m32rimm/: README.md  pyproject.toml
cc_orchestrations/implement/: __init__.py  assumptions.py  cli.py  pipeline.py
cc_orchestrations/pr_review/: __init__.py  batch.py  config.py  phases.py
cc_orchestrations/pr_review/prompts/: __init__.py  architecture_reviewer.txt  blind_spot_hunter.txt  conclusion_validator.txt  council_reviewer.txt  finding_validator.txt  interaction_investigator.txt  mr_thread_classifier.txt  phase3_synthesis.txt  requirements_reviewer.txt  side_effects_reviewer.txt  test_coverage_reviewer.txt  triage.txt
cc_orchestrations/prompts/: __init__.py  conduct.py  implement.py
cc_orchestrations/spec/: __init__.py  formalizer.py  validator.py
cc_orchestrations/tests/: conftest.py  test_conduct_e2e.py  test_core_agents.py  test_core_config.py  test_core_context.py  test_core_git.py  test_core_manifest.py  test_core_runner.py  test_core_schemas.py  test_core_state.py  test_core_trajectory.py  test_core_workspace.py  test_e2e_conduct.py  test_integration_dry_run.py  test_live_cli.py  test_pr_review_e2e.py  test_pr_review_phases.py  test_prompts.py  test_workflow_engine.py  test_workflow_gates.py  test_workflow_loops.py
cc_orchestrations/workflow/: __init__.py  engine.py  gates.py  loops.py
cc_orchestrations/workflows/: __init__.py
cc_orchestrations/workflows/conduct/: __init__.py
cc_orchestrations/workflows/pr_review/: EXAMPLE_EXTENSION.md  INTEGRATION.md  README.md  __init__.py  config.py  phases.py
cc_orchestrations/workflows/pr_review/prompts/: architecture_reviewer.txt  (+5 more)
(+706 files in other folders)
