[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc_orchestrations"
version = "0.2.0"
description = "Claude Code orchestration system for multi-agent workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ryan Murphy" }
]
keywords = [
    "claude",
    "orchestration",
    "ai",
    "automation",
    "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
cc-orchestrations = "cc_orchestrations.cli:main"
cco = "cc_orchestrations.cli:main"

[project.entry-points."cc_orchestrations.extensions"]
# Extensions register here

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    ".",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cc_orchestrations"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
