[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc_orchestrations_m32rimm"
version = "0.1.0"
description = "m32rimm-specific extensions for cc_orchestrations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ryan Murphy" }
]
dependencies = [
    "cc_orchestrations>=0.2.0",
]
keywords = [
    "cc_orchestrations",
    "m32rimm",
    "mongodb",
    "etl",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.entry-points."cc_orchestrations.extensions"]
m32rimm = "cc_orchestrations_m32rimm:register"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_orchestrations_m32rimm"]

[tool.ruff]
line-length = 88
target-version = "py311"
